Fix spacing for contact icons on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,6 +170,12 @@ div.social-media {
 }
 
 /* Media queries for responsive design */
+@media screen and (min-width: 768px) {
+    nav {
+        font-size: 1.25rem;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .navbar-toggler {
         font-size: 1.5rem;
@@ -221,9 +227,10 @@ div.social-media {
     }
 }
 
-@media screen and (min-width: 768px) {
-    nav {
-        font-size: 1.25rem;
+@media only screen and (max-width: 992px) {
+    body > div > section.contact-form.pb-5 > div > div > div > div > div:nth-child(1) > div:nth-child(1) > div.col-lg-1.offset-1.col-md-2.col-sm-2.col-2,
+    body > div > section.contact-form.pb-5 > div > div > div > div > div:nth-child(1) > div.row.pt-3.py-3 > div.col-lg-1.offset-1.col-md-2.col-sm-2.col-2 {
+        text-align: right;
     }
 }
 
